# ICT-NT

./: CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  backtest.py  backtest_benchmark.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-quality.yml  test.yml
constants/: shared_dict_key.py
core/: __init__.py  shared_state.py
core/constants/: __init__.py  shared_dict_keys_base.py
core/enums/: __init__.py  money_management_type.py  rule_signal.py
core/rules/: __init__.py  entry_trading_rule.py  move_sl_to_breakeven_quote_rule.py  partial_close_quote_rule.py  quote_tick_rule_base.py  rule_base.py  sync_shared_orders_quote_rule.py  trailing_stop_quote_rule.py
core/strategies/: __init__.py  rule_based_strategy.py
indicators/: fair_value_gap.py  fibonacci_levels.py  pivot_points_high_low.py  smart_pivot_points.py
notebooks/: databento_csv_to_parquet_catalog.ipynb  databento_dbn_zst_to_parquet_catalog.ipynb  databento_to_parquet_catalog.ipynb  databento_viewer.ipynb  ict_smc_strategy_backtest.ipynb  ict_strategy_backtest.ipynb  turtle_soup_strategy_backtest.ipynb  write_instrument_to_parquet_catalog.ipynb
risk/: my_fixed_risk_sizer.py
rules/: daily_bias_rule.py  debug_rule.py  entry_ict_rule.py  entry_turtle_soup_rule.py  expected_target_rule.py  fvg_rule.py  liquidity_pool_reuse_rule.py  market_structure_rule.py  market_structure_shift_rule.py  reward_risk_ratio_rule.py  search_liquidity_pools_rule.py  sma_exit_rule.py  sma_filter_rule.py  turtle_soup_multi_tf_rule.py  turtle_soup_rule.py  weekly_context_rule.py
strategies/: ict_smc_strategy.py  ict_smc_strategy_rules_adapter.py
strategies/empty/: empty_strategy.py
strategies/ict/: ict_strategy.py
strategies/ict_smc_components/: __init__.py  detectors.py  models.py  state.py  utils.py
strategies/turtle_soup/: turtle_soup_strategy.py
tests/: test_daily_bias_rule.py  test_fair_value_gap.py  test_fibonacci_levels.py  test_fvg_rule_manual.py  test_ict_detectors.py  test_ict_strategy_order_lifecycle.py  test_market_structure_rulebase.py  test_smart_pivot_points.py  test_smart_pivots.py  test_weekly_context_rule.py
tests/rules/: test_fvg_rule.py
