[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ict-trading-framework"
version = "0.1.0"
description = "Algorithmic trading framework implementing ICT concepts and Turtle Soup strategies"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = [
    "trading",
    "algorithmic-trading",
    "backtesting",
    "ict",
    "turtle-soup",
    "nautilus-trader",
    "quantitative-finance"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "nautilus_trader==1.221.0",
    "pandas>=2.3.0",
    "numpy>=2.2.0",
    "pyarrow>=21.0.0",
    "pandas-ta>=0.4.71b0",
    "databento>=0.64.0",
    "databento-dbn>=0.42.0",
    "python-dotenv>=1.1.0",
    "python-dateutil>=2.9.0",
    "pytz>=2025.2",
    "zstandard>=0.25.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.1.0",
    "jupyterlab>=4.4.0",
    "ipykernel>=6.30.0",
    "ipython>=8.37.0",
    "notebook>=7.4.0",
    "matplotlib>=3.10.0",
    "plotly>=6.3.0",
]

dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "safety>=3.0.0",
    "pandas-stubs>=2.3.0",
    "types-python-dateutil>=2.9.0",
    "types-pytz>=2025.2.0",
]

all = [
    "ict-trading-framework[jupyter,dev]"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/YOUR_REPO"
Documentation = "https://github.com/YOUR_USERNAME/YOUR_REPO#readme"
Repository = "https://github.com/YOUR_USERNAME/YOUR_REPO"
Issues = "https://github.com/YOUR_USERNAME/YOUR_REPO/issues"

[tool.setuptools.packages.find]
include = ["core*", "rules*", "strategies*", "indicators*", "risk*", "constants*"]
exclude = ["tests*", "notebooks*", "data*", "catalog*"]

[tool.black]
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["core", "rules", "strategies", "indicators", "risk"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
